--- a/module-services/EmployerServices/Pages/Dashboard.cshtml
+++ b/module-services/EmployerServices/Pages/Dashboard.cshtml
@@ -1,4 +1,4 @@
-@page
+@page "/Dashboard"
 @model EmployerServices.Pages.DashboardModel
 @{
     ViewData["Title"] = "Employer Services - Dashboard";
