--- a/module-services/camel-gateway/src/main/resources/templates/dashboard.html
+++ b/module-services/camel-gateway/src/main/resources/templates/dashboard.html
@@ -482,7 +482,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="your-logo.jpg" alt="Logo" class="logo-icon">
+                <img src="naswa_logo.jpg" alt="Logo" class="NASWA-icon">
                 <div>
                     <h1>NASWA OPEN UI - System Dashboard</h1>
                     <p>Real-time Service Health & Claims Processing</p>
