--- a/module-services/camel-gateway/src/main/resources/templates/dashboard.html
+++ b/module-services/camel-gateway/src/main/resources/templates/dashboard.html
@@ -482,9 +482,9 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="/naswa_logo.jpg" alt="Logo" class="NASWA-icon">
+                <img src="./naswa_logo.jpg" alt="Logo" class="NASWA-icon">
                 <div>
-                    <h1>NASWA Open UI Integration Layer (OUIL) | Unemployment Insurance System Demo v2.0</h1>
+                    <h1>NASWA Open UI Integration Layer | OUIL v2.0</h1>
                     <p>Service Health, Claims Processing, and Benefits Administration</p>
                 </div>
             </div>
