--- a/module-services/camel-gateway/src/main/resources/templates/dashboard.html
+++ b/module-services/camel-gateway/src/main/resources/templates/dashboard.html
@@ -482,7 +482,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="./naswa_logo.jpg" alt="Logo" class="NASWA-icon">
+                <img src="naswa_logo.jpg" alt="Logo" class="logo-icon">
                 <div>
                     <h1>NASWA Open UI Integration Layer | OUIL v2.0</h1>
                     <p>Service Health, Claims Processing, and Benefits Administration</p>
