--- a/module-services/camel-gateway/src/main/resources/templates/dashboard.html
+++ b/module-services/camel-gateway/src/main/resources/templates/dashboard.html
@@ -54,11 +54,9 @@
         }
 
         .logo-icon {
-			width: 50px;
-			height: 50px;
+			height: 80px;   
+			width: auto;      		
 			margin-right: 1rem;
-			border-radius: 50%;
-			object-fit: cover;  
         }
 
         .logo h1 {
@@ -482,7 +480,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="naswa_logo.jpg" alt="Logo" class="logo-icon">
+                <img src="naswa_logo.png" alt="Logo" class="logo-icon">
                 <div>
                     <h1>NASWA Open UI Integration Layer | OUIL v2.0</h1>
                     <p>Service Health, Claims Processing, and Benefits Administration</p>
