--- a/module-services/paymentservices/templates/dashboard.html
+++ b/module-services/paymentservices/templates/dashboard.html
@@ -371,15 +371,11 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <div class="logo-icon">PS</div>
+                <img src="naswa_logo.png" alt="NASWA Logo" class="logo-icon">
                 <div>
                     <h1>Payment Services | OUIL v2.0</h1>
                     <p>Unemployment Benefit Payment Processing System</p>
                 </div>
-            </div>
-            <div class="http-status">
-                <div class="status-dot"></div>
-                HTTP Server Active
             </div>
         </div>
     </header>
